tam/k8s/overlays/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tam-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
